@@ -27,3 +27,4 @@ Changes in version 1.3.x
 + added na.rm option to getTopTaxa function   
 + bugfix: makeTreeSEFromPseq -- orientation of assay is taken into account
 + bugfix: getExperimentCrossCorrelation's "matrix"" mode works with features named equally
++ bugfix: getExperimentCrossCorrelation's calculates correlations correctly with features named equally
